US361030: Updated dependency versions (#5)